--- a/autostart/dash.desktop
+++ b/autostart/dash.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Application
 Name=DASHBOARD
 Comment=
-Exec=/home/pi/dashy-client/show-dashboard.sh
+Exec=~/dashy-client/show-dashboard.sh
 StartupNotify=false
 Terminal=false
 Hidden=false
