--- a/ubuntu/dashy.desktop
+++ b/ubuntu/dashy.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Type=Application
-Exec=/home/dev/dashy-device/show-dashboard.sh
+Exec=bash -c '~/dashy-device/show-dashboard.sh --vertical'
 X-GNOME-Autostart-enabled=true
 Name=Dashy
